a1/brendan_gordon/TEST_PROGRAMS/invalidtype/dongkyu_kim/error4.min
# assign a variable that is not yet declared

var x: int;

x = y;

print x;

